# mapreduce

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  configure
data/: lorem_medium.txt  lorem_small.txt
docs/: Doxyfile
src/: CMakeLists.txt  args.c  args.h  buffalloc.c  buffalloc.h  common.h  config.h  dictionary.c  dictionary.h  error.h  filereader.c  filereader.h  filereader_mmap.c  filereader_mmap.h  filereader_read.c  filereader_read.h  main.c  mapreduce.c  mapreduce.h  mapreduce_parallel.c  mapreduce_parallel.h  mapreduce_sequential.c  mapreduce_sequential.h  timer.h  tools.c  tools.h  word.c  word.h  wordstreamer.c  wordstreamer.h  wordstreamer_interleave.c  wordstreamer_interleave.h  wordstreamer_iwords.c  wordstreamer_iwords.h  wordstreamer_scatter.c  wordstreamer_scatter.h  wordstreamer_schunks.c  wordstreamer_schunks.h
tests/: CMakeLists.txt
tests/args/: CMakeLists.txt  test_args.c
tests/buffalloc/: CMakeLists.txt  test_buffalloc.c
tests/dictionary/: CMakeLists.txt  test_dictionary.c
tests/filereader_mmap/: CMakeLists.txt  test_filereader_mmap.c
tests/filereader_read/: CMakeLists.txt  test_filereader_read.c
tests/mapreduce_parallel/: CMakeLists.txt  test_mapreduce_parallel.c
tests/mapreduce_sequential/: CMakeLists.txt  test_mapreduce_sequential.c
tests/word/: CMakeLists.txt  test_word.c
tests/wordstreamer_interleave/: CMakeLists.txt  test_wordstreamer_interleave.c
tests/wordstreamer_iwords/: CMakeLists.txt  test_wordstreamer_iwords.c
tests/wordstreamer_scatter/: CMakeLists.txt  test_wordstreamer_scatter.c
tests/wordstreamer_schunks/: CMakeLists.txt  test_wordstreamer_schunks.c
